Roundcube Webmail Quickrules
============================

2011 01 14
==========
 * Initial version