@@ -1,6 +1,10 @@
 Roundcube Webmail Quickrules
 ============================
 
+2011 01 18
+==========
+ * Add required plugin code (r4424)
+
 2011 01 14
 ==========
  * Initial version
